# i3-plasma-integration

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  README.md  build.rs  justfile
ci/: before_deploy.sh
doc/: i3-plasma-integration.1  i3-plasma.1
resources/: PKGBUILD
src/: cli.rs  main.rs  notifications.rs  util.rs
